@@ -1,9 +1,13 @@
 package pages;
 
 import org.openqa.selenium.By;
+import org.openqa.selenium.JavascriptExecutor;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
+import org.openqa.selenium.interactions.Actions;
+import org.openqa.selenium.support.ui.ExpectedConditions;
 
+import java.time.Duration;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
@@ -19,27 +23,35 @@ public class TourDetail extends CommonPage{
     // tất cả ngày trong calendar
     private By byAllDays = By.xpath("//div[@class='react-datepicker__month']//div[contains(@class,'react-datepicker__day')]");
     // icon next month >
-    private By byBtnNextMonth = By.xpath("//button[@aria-label='Next Month']");
+    By byValidDay = By.cssSelector(
+            ".react-datepicker__day" +
+                    ":not(.react-datepicker__day--disabled)" +
+                    ":not(.react-datepicker__day--outside-month)"
+    );
+    private By byBtnNextMonth = By.xpath("//div[@class='react-datepicker']//button[@aria-label='Next Month']");
     // icon previous month
     private By byBtnPreMonth = By.xpath("//button[@aria-label='Previous Month']");
-    // các ngày không được chọn
-    private By byOutsideMonth = By.xpath("//div[contains(@class,'react-datepicker__day--outside-month')]");
-
-
+    private By byBtnContinueBook = By.id("CheckoutInitiate");
+    private By byBtnAsk = By.xpath("//div[button[@id='CheckoutInitiate']]//a[@id='EnquiryTourPage1']");
 
 
     public TourDetail(WebDriver driver) {
         super(driver);
     }
     public void clickBtnBookNow(){
+        waitUtil.waitForPresenceOfElementLocated(byBtnBookNow);
         scrollToElement(byBtnBookNow);
         click(byBtnBookNow);
     }
     public void goToNextMonth() {
+        wait.until(ExpectedConditions.presenceOfElementLocated(byBtnNextMonth));
+        WebElement nextBtn = driver.findElement(byBtnNextMonth);
+        jsClick(nextBtn);
 
-            click(byBtnNextMonth);
-
+        // đợi ngày mới render
+        wait.until(ExpectedConditions.presenceOfAllElementsLocatedBy(byValidDay));
     }
+
     private List<WebElement> getAvailableDaysInCurrentMonth() {
         return driver.findElements(By.cssSelector(".react-datepicker__day"))
                 .stream()
@@ -79,22 +91,29 @@ public class TourDetail extends CommonPage{
     }
     public LocalDate selectRandomStartDateLt60Days() {
         LocalDate today = LocalDate.now();
+        Random random = new Random();
 
-        for (int i = 0; i < 2; i++) { // chỉ scan tháng hiện tại + tháng sau
-            List<WebElement> days = getAvailableDaysInCurrentMonth();
+        for (int monthScan = 0; monthScan < 2; monthScan++) {
+
+            List<WebElement> days = wait.until(
+                    ExpectedConditions.presenceOfAllElementsLocatedBy(byValidDay)
+            );
 
             List<WebElement> validDays = days.stream()
-                    .filter(d -> {
-                        long diff = ChronoUnit.DAYS.between(
-                                today, getDateFromDayElement(d));
-                        return diff > 0 && diff < 60;
+                    .filter(day -> {
+                        try {
+                            LocalDate date = getDateFromDayElement(day);
+                            long diff = ChronoUnit.DAYS.between(today, date);
+                            return diff > 0 && diff < 60;
+                        } catch (Exception e) {
+                            return false; // tránh element lỗi aria-label
+                        }
                     })
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (!validDays.isEmpty()) {
-                WebElement chosen = validDays.get(
-                        new Random().nextInt(validDays.size()));
-                chosen.click();
+                WebElement chosen = validDays.get(random.nextInt(validDays.size()));
+                jsClick(chosen);
                 return getDateFromDayElement(chosen);
             }
 
@@ -103,7 +122,13 @@ public class TourDetail extends CommonPage{
 
         throw new RuntimeException("No start date < 60 days found");
     }
+    public void clickContinueBook(){
+        waitUtil.waitForPresenceOfElementLocated(byBtnContinueBook);
 
+        scrollToElement(byBtnContinueBook);
+
+        jsClick(driver.findElement(byBtnContinueBook));
+    }
 
 
 
